Fix missing package (Microsoft.Extensions.Hosting.Systemd

--- a/src/LangProwess.Server/LangProwess.Server.csproj
+++ b/src/LangProwess.Server/LangProwess.Server.csproj
@@ -20,16 +20,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LangProwess.Web\LangProwess.Web.csproj" />
     <ProjectReference Include="..\LangProwess.Shared\LangProwess.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
 
